--- a/package.json
+++ b/package.json
@@ -10,10 +10,23 @@
   },
   "dependencies": {
     "@next/font": "13.0.7",
+    "@walletconnect/web3-provider": "^1.8.0",
+    "@web3auth/web3auth": "^2.1.3",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
+    "magic-sdk": "^11.0.0",
+    "moralis": "^2.10.1",
     "next": "13.0.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-moralis": "^1.4.2",
+    "web3": "^1.8.1",
+    "web3uikit": "^1.0.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "prettier": "^2.8.1",
+    "tailwindcss": "^3.2.4"
   }
 }
